# advent-of-code

./: .editorconfig  .env.example  .envrc  .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  day00.py  day00_test.py  day01.py  day01_test.py  day02.py  day02_test.py  day03.py  day03_test.py  day04.py  day04_test.py  day05.py  day05_test.py  day06.py  day07.py  day07_test.py  day08.py  day08_test.py  day09.py  day09_test.py  day10.md  day10.py  day10_test.py  day11.py  day11_test.py  day12.py  day12_test.py  day13.py  day13_test.py  day14.py  day14_test.py  day15.py  day15_test.py  (+20 more)
.github/: dependabot.yaml
.github/workflows/: linter.yml  python-package.yaml  python-package.yml  pythonapp.yml  pythonpackage.yml  update-pdm-deps.yaml
advent/: __init__.py  template.py
advent/aoc2015/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  helpers.py
advent/aoc2016/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py
advent/aoc2017/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
advent/aoc2018/: README.md  day01.py  day02.py  day03.py  day03_polished.py  day04.py  day04_polished.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.md  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day20_cfg.md  day21.py  day22.py  day23.py  day24.py  day25.py  helpers.py
advent/aoc2019/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  intcode_computer.py  intcode_interpreter.py
advent/aoc2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
advent/util/: heap.py  priority_queue.py
src/: __init__.py  aoc_utils.py  day00.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day_00.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_08.py  day_10.py  day_12.py  day_14.py  day_24.py  helpers.py  intcode_interpreter.py  logger.py  template.py
src/aoc2015/: day02.py  day05.py  day06.py  day08.py  day09.py  day11.py  day12.py  day13.py  day14.py  day15.py
src/aoc2018/: day01.py  day02.py  day03.py  day03_polished.py  day04.py  day04_polished.py  day05.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day24.py  day25.py
src/aoc2019/: day03.py  day10.py  day12.py
src/aoc2020/: day02.py
src/aoc_cj/: __init__.py  pipe.py
src/util/: helpers.py  logger.py
test/: day00_test.py  day01_test.py  day02_test.py  day03_test.py  day04_test.py  day09_test.py  day10_test.py  day12_test.py  day17_test.py  path_fix.py  test_00.py  test_01.py  test_02.py  test_day_00.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_08.py  test_day_10.py  test_day_12.py  test_day_14.py  test_day_24.py  test_helpers.py  test_intcode_interpreter.py
tests/: template.py  test_util.py  test_y2019_d01.py  test_y2019_d02.py  test_y2019_d06.py  test_y2019_d08.py  test_y2019_d10.py
tests/2018/: day01_test.py  day02_test.py  day03_test.py  day04_test.py  day05_test.py  day06_test.py  day07_test.py  day08_test.py  day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day16_test.py  day17_test.py  day18_test.py  day19_test.py  day20_test.py  day22_test.py  day23_test.py  day24_test.py  day25_test.py
tests/2019/: test_y2019_d04.py  test_y2019_d12.py  test_y2019_d24.py
tests/aoc2015/: day02_test.py  day03_test.py  day04_test.py  day05_test.py  day06_test.py  day07_test.py  day08_test.py  day09_test.py  day11_test.py  day13_test.py  day14_test.py  day15_test.py  day17_test.py  ruff.toml  y2015d01_test.py  y2015d02_test.py  y2015d03_test.py  y2015d04_test.py  y2015d05_test.py  y2015d06_test.py  y2015d07_test.py  y2015d08_test.py  y2015d09_test.py  y2015d10_test.py  y2015d11_test.py  y2015d12_test.py  y2015d13_test.py  y2015d14_test.py  y2015d15_test.py  y2015d17_test.py  y2015d18_test.py  y2015d19_test.py  y2015d20_test.py  y2015d21_test.py  y2015d22_test.py  y2015d23_test.py  y2015d24_test.py  y2015d25_test.py
tests/aoc2016/: ruff.toml  y2016d01_test.py  y2016d02_test.py  y2016d03_test.py  y2016d04_test.py  y2016d05_test.py  y2016d06_test.py  y2016d07_test.py  y2016d08_test.py  y2016d09_test.py  y2016d10_test.py  y2016d11_test.py  y2016d12_test.py  y2016d13_test.py  y2016d14_test.py  y2016d15_test.py  y2016d16_test.py  y2016d17_test.py  y2016d18_test.py  y2016d19_test.py  y2016d20_test.py  y2016d21_test.py  y2016d22_test.py  y2016d23_test.py  y2016d24_test.py
tests/aoc2017/: ruff.toml  y2017d01_test.py  y2017d02_test.py  y2017d03_test.py  y2017d04_test.py  y2017d05_test.py  y2017d06_test.py  y2017d07_test.py  y2017d08_test.py  y2017d09_test.py  y2017d10_test.py  y2017d11_test.py  y2017d12_test.py  y2017d13_test.py  y2017d14_test.py  y2017d15_test.py  y2017d16_test.py  y2017d17_test.py  y2017d18_test.py  y2017d19_test.py  y2017d20_test.py  y2017d21_test.py  y2017d22_test.py  y2017d24_test.py  (+1 more)
(+499 files in other folders)
