[project]
name = "aoc-cj"
version = "0.1.0"
description = "cj81499's solutions for https://adventofcode.com/"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Cal Jacobson", email = "cj81499@users.noreply.github.com" },
]
dependencies = [
  "advent-of-code-data>=2.1.0",
  "frozendict>=2.4.6",
  "lark>=1.3.1",
  "more-itertools>=10.8.0",
  "networkx>=3.5",
  "numpy>=2.3.4",
  "z3-solver>=4.15.4.0",
]

[project.urls]
homepage = "https://github.com/cj81499/advent-of-code"

[project.entry-points."adventofcode.user"]
cj81499 = "aoc_cj:solve"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.3",
  "tombi>=0.7.0",
  "types-networkx>=3.5.0.20251104",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
parallel = true
omit = []

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
exclude_also = [
  'if __name__ == "__main__":',
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  '@abc\.abstractmethod',
  "assert False",
  'assert_never\(.*\)',
]
partial_branches = [
  "pragma: no branch",
  'for .* in itertools\.count\(\):',
]

[tool.mypy]  # https://mypy.readthedocs.io/en/stable/config_file.html
exclude = [
  '^tests\/aoc2017\/',
  '^src\/aoc_cj\/aoc2017\/',
  '^tests\/aoc2018\/',
  '^src\/aoc_cj\/aoc2018\/',
  '^tests\/aoc2019\/',
  '^src\/aoc_cj\/aoc2019\/',
  '^tests\/aoc2020\/',
  '^src\/aoc_cj\/aoc2020\/',
  '^tests\/aoc2021\/',
  '^src\/aoc_cj\/aoc2020\/',
]
strict = true
# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = true
enable_error_code = [
  # https://mypy.readthedocs.io/en/stable/error_code_list2.html#error-codes-optional
  "redundant-self",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-awaitable",
  "unused-ignore",
  "explicit-override",
  "unimported-reveal",
]
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_column_numbers = true
pretty = true
# Miscellaneous
warn_unused_configs = true

[[tool.mypy.overrides]]
# aocd doesn't provide types https://github.com/wimglenn/advent-of-code-data/issues/78
module = ["aocd"]
ignore_missing_imports = true

[tool.pytest]
# skip slow tests by default
addopts = ["-m", "not slow"]
markers = ["slow: marks tests as slow"]
strict_xfail = true

[tool.ruff]
line-length = 120
output-format = "grouped"
src = [
  "src",
  # "tests",
]

[tool.ruff.lint]
select = [
  # https://docs.astral.sh/ruff/rules/ # TODO: enable additional linter rules
  # "F", # Pyflakes
  "F401",  # unused-import
  # "E", # pycodestyle errors
  "W",  # pycodestyle warnings
  "I",  # isort
  "UP",  # pyupgrade
  # TODO: evaluate flake8 rules
  "ERA",
  # "PL", # pylint
  # "FURB", #refurb
  "RUF",  # ruff
]
